src/main/java/com/example/redditclone/error/UserNotFoundException.java
package com.example.redditclone.error;

public class UserNotFoundException extends Exception {
    public UserNotFoundException(String message) {
        super(message);
    }
}
